erDiagram
    RESERVA }|--|| ASIENTO : CONTIENE
    RESERVA }|--|| VUELO : CONTIENE
    RESERVA }|--|| PASAJERO : CONTIENE
    RESERVA }|--|| SERVICIOCOMIDA : TIENE
    ESTADOASIENTO ||--|{ ASIENTO : TIENE
    PASAJERO }|--|| TIPODOC : TIENE
    VUELO }|--|| AEROPUERTO : TIENE
    VUELO }|--|| AEROPUERTO : TIENE
    VUELO }|--|| AERONAVE : TIENE
    AEROPUERTO }|--||CIUDAD : TIENE
    
    ASIENTO{
        INT ID
        ESTADOASIENTO ESTADO
        VARCHAR CODIGOASIENTO
    }
    ESTADOASIENTO{
        INT ID 
        VARCHAR NOMBRE
        VARCHAR CARACTERISTICAS
        BOOLEAN HABILITADOCOMPRA
    }
    TIPODOC{
        INT ID 
        VARCHAR NOMBRE
        VARCHAR CARACTERISTICAS
    }
    PASAJERO {
        INT ID
        VARCHAR NOMBRE
        TIPODOC TIPODOCUMENTO
        VARCHAR DOCUMENTO
        VARCHAR NUMEROTELEFONO
        VARCHAR CORREO
    }
    CIUDAD{
        INT ID 
        VARCHAR NOMBRE
        VARCHAR CARACTERISTICAS
    }
    AEROPUERTO{
        INT ID 
        VARCHAR NOMBRE
        VARCHAR CARACTERISTICAS
        CIUDAD CIUDAD
    }
    AERONAVE{
        INT ID
        VARCHAR MARCA
        VARCHAR MODELO
    }
    VUELO{
        INT NUMEROVUELO
        DATE FECHAVUELO
        AEROPUERTO AEROPUERTOSALIDA
        DATETIME HORASALIDA
        AEROPUERTO AEROPUERTODESTINO
        DATETIME HORALLEGADA
        AERONAVE AERONAVE
        TIME DURACION 
        INT DISTANCIA
    }
    SERVICIOCOMIDA{
        INT ID 
        VARCHAR NOMBRE
        VARCHAR CARACTERISTICAS
    }
    RESERVA{
        INT CODIGORESERVA
        PASAJERO PASAJERO
        VUELO VUELO
        INT COSTOVUELO
        ASIENTO ASIENTO
        SERVICIOCOMIDA COMIDA
        BOOLEAN GENERACIONTARJETAHABILITADA
    }


